force-app/main/default/objects/CEMS_Job_Opening__c/fields/CEMS_Address__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Address__c</fullName>
    <label>Address</label>
    <type>Address</type>
</CustomField>