force-app/main/default/objects/CEMS_Job_Opening__c/fields/CEMS_Available_Vacancies__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Available_Vacancies__c</fullName>
    <label>Available Vacancies</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>