force-app/main/default/objects/CEMS_Job_Opening__c/fields/CEMS_Experience__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Experience__c</fullName>
    <label>Experience</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0-1 Yr</fullName>
            </value>
            <value>
                <fullName>1-3 Yrs</fullName>
            </value>
            <value>
                <fullName>4-7 Yrs</fullName>
            </value>
            <value>
                <fullName>7-10 Yrs</fullName>
            </value>
            <value>
                <fullName>10+ Yrs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>