force-app/main/default/objects/CEMS_Job_Opening__c/fields/CEMS_Job_Location__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Job_Location__c</fullName>
    <label>Job Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hyderabad</fullName>
            </value>
            <value>
                <fullName>Pune</fullName>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Bangalore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>