force-app/main/default/objects/CEMS_Job_Opening__c/fields/CEMS_Job_Opening_ID__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Job_Opening_ID__c</fullName>
    <displayFormat>JO-{0000}</displayFormat>
    <label>Job Opening ID</label>
    <type>AutoNumber</type>
</CustomField>