force-app/main/default/objects/CEMS_Job_Opening__c/fields/CEMS_Maximum_Pay__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Maximum_Pay__c</fullName>
    <label>Maximum Pay</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>