force-app/main/default/objects/CEMS_Job_Opening__c/fields/CEMS_Recruiting_Manager__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Recruiting_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recruiting Manager</label>
    <referenceTo>CEMS_Personnel__c</referenceTo>
    <relationshipLabel>Job Openings</relationshipLabel>
    <relationshipName>Job_Openings</relationshipName>
    <type>Lookup</type>
</CustomField>