force-app/main/default/objects/CEMS_Job_Opening__c/fields/CEMS_Roles_and_Responsibilities__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Roles_and_Responsibilities__c</fullName>
    <label>Roles and Responsibilities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>