force-app/main/default/objects/CEMS_Job_Opening__c/fields/CEMS_Skills__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Skills__c</fullName>
    <label>Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CEMS_Skills</valueSetName>
    </valueSet>
</CustomField>