force-app/main/default/objects/CEMS_Job_Opening__c/fields/CEMS_Status__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Filled/Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>