force-app/main/default/objects/CEMS_Job_Opening__c/fields/CEMS_Technology__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Technology__c</fullName>
    <label>Technology</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Amazon Web Services</fullName>
            </value>
            <value>
                <fullName>Azure</fullName>
            </value>
            <value>
                <fullName>Oracle Cloud</fullName>
            </value>
            <value>
                <fullName>Google Cloud</fullName>
            </value>
            <value>
                <fullName>IBM Cloud</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>