force-app/main/default/objects/CEMS_Job_Opening__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <label>Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E1</fullName>
            </value>
            <value>
                <fullName>E2</fullName>
            </value>
            <value>
                <fullName>E3</fullName>
            </value>
            <value>
                <fullName>E4</fullName>
            </value>
            <value>
                <fullName>E5</fullName>
            </value>
            <value>
                <fullName>E6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>