force-app/main/default/objects/CEMS_Job_Opening__c/recordTypes/CEMS_External_Job_Opening.recordType-meta.xml
<RecordType>
    <fullName>CEMS_External_Job_Opening</fullName>
    <active>true</active>
    <label>External Job Opening</label>
</RecordType>