force-app/main/default/objects/CEMS_Job_Opening__c/recordTypes/CEMS_Internal_Job_Opening.recordType-meta.xml
<RecordType>
    <fullName>CEMS_Internal_Job_Opening</fullName>
    <active>true</active>
    <label>Internal Job Opening</label>
</RecordType>