force-app/main/default/objects/CEMS_Job_Opening__c/validationRules/Due_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Due_Date</fullName>
    <active>true</active>
    <errorConditionFormula>CEMS_Due_Date__c  &lt;=  TODAY()</errorConditionFormula>
    <errorMessage>Due Date must be greater than current date.</errorMessage>
</ValidationRule>