force-app/main/default/objects/CEMS_Job_Opening__c/validationRules/Salary_Error.validationRule-meta.xml
<ValidationRule>
    <fullName>Salary_Error</fullName>
    <active>true</active>
    <errorConditionFormula>CEMS_Minimum_Pay__c   &gt;=   CEMS_Maximum_Pay__c</errorConditionFormula>
    <errorMessage>Minimum Pay must be less than Maximum Pay.</errorMessage>
</ValidationRule>