force-app/main/default/objects/CEMS_Job_Opening__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CEMS_Job_Opening_ID__c</columns>
    <columns>NAME</columns>
    <columns>CEMS_Skills__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CEMS_Available_Vacancies__c</columns>
    <columns>CEMS_Filled_Vacancies__c</columns>
    <columns>CEMS_Approval_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>